--- a/po/es.po
+++ b/po/es.po
@@ -6,13 +6,13 @@ msgstr ""
 "Project-Id-Version: es_ES\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-10-27 20:11+0000\n"
-"Last-Translator: Antonio De Luna <adelunaddl@yahoo.com.mx>\n"
+"PO-Revision-Date: 2010-06-19 11:14+0000\n"
+"Last-Translator: Kytos <Unknown>\n"
 "Language-Team: <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
+"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -72,7 +72,7 @@ msgstr "Nombre"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Grupo de canales"
+msgstr "Grupo"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -141,7 +141,7 @@ msgstr "> Lista de canales"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Añadir a favoritos"
+msgstr "Añadir canal a favoritos"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
@@ -157,7 +157,7 @@ msgstr "_Ayuda"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_Ver"
+msgstr "_Vista"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
@@ -165,11 +165,11 @@ msgstr "_Favoritos"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>Última actualización: </i>"
+msgstr "<i>Actualizados recientemente</i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "Última actualización: "
+msgstr "Actualizados recientemente "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
@@ -189,11 +189,11 @@ msgstr "<b>Distribución de la lista de canales:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>Dirección URL de la lista de canales</b>"
+msgstr "<b>Dirección de la lista de canales</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>Tiempo de espera para cargar un canal</b>"
+msgstr "<b>Terminó el tiempo de espera para cargar canal</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
