--- a/po/fr.po
+++ b/po/fr.po
@@ -8,23 +8,23 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-02 11:12+0000\n"
-"Last-Translator: Nizar Kerkeni <nizarus@nizarus.org>\n"
+"PO-Revision-Date: 2010-04-24 20:48+0000\n"
+"Last-Translator: moumny <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
+"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Re-connection"
+msgstr "Reconnexion"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "En cours de connection"
+msgstr "Connexion en cours"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
@@ -38,7 +38,7 @@ msgstr "Mémoire tampon"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Guide de chaines mise a jour"
+msgstr "Guide de chaines mis à jour"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
@@ -109,20 +109,20 @@ msgstr "Appuyez sur Esc (Echap) pour sortir du mode plein écran"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Communication avec le Serveur"
+msgstr "Communication avec le Serveur en cours"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Mis a jour de la base de données"
+msgstr "Mise à jour de la base de données"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Mise à jour de Chaînes"
+msgstr "Mise à jour de Chaînes Terminée"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
 msgstr ""
-"Récupération du Guide de Chaînes échoué a cause de problèmes de réseau"
+"La Récupération du Guide de Chaînes échoué à cause de problèmes de réseau"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
@@ -138,7 +138,7 @@ msgstr "> Guide de Chaînes"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Ajouter chaîne aux favoris"
+msgstr "Ajouter cette chaîne aux favoris"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
@@ -178,7 +178,7 @@ msgstr "<b>Fréquence de la mise à jour automatique</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>Language pour Guide de Chaînes</b>"
+msgstr "<b>Langue du Guide de Chaînes</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
@@ -186,7 +186,7 @@ msgstr "<b>Disposition pour Guide de Chaînes</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>URL pour Guide de Chaînes</b>"
+msgstr "<b>URL du Guide de Chaînes</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
@@ -194,7 +194,7 @@ msgstr "<b>Limite de temps de chargement pour la Chaîne</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Lecteur Media</b>"
+msgstr "<b>Lecteur Média</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
@@ -226,7 +226,7 @@ msgstr "Port Sortant: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "Joueur"
+msgstr "Lecteur"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
@@ -246,7 +246,7 @@ msgstr "Unité (fenêtre unique):"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "Utilisez lecteur externe"
+msgstr "Utilisez un lecteur externe"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
@@ -258,17 +258,17 @@ msgstr "Serveur non disponible"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "Téléchargement"
+msgstr "Téléchargement en cours"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "Ports statiques non disponible"
+msgstr "Ports statiques non disponibles"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
 msgstr ""
-"Ports statiques non disponible, souhaitez-vous continuer en utilisent des "
+"Ports statiques non disponibles, souhaitez-vous continuer en utilisant des "
 "ports dynamiques?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
@@ -314,10 +314,10 @@ msgid "Preferences"
 msgstr "Préférences"
 
 msgid "Play"
-msgstr "Jouer"
+msgstr "Lire"
 
 msgid "Stop"
-msgstr "Arrêt"
+msgstr "Arrêter"
 
 msgid "Always On Top"
 msgstr "Toujours au-dessus"
@@ -338,7 +338,7 @@ msgid "<i>Program Start</i>"
 msgstr "<i>Demarrer Programme</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Favoris de Chaînes</b></big>"
+msgstr "<big><b>Favoris</b></big>"
 
 msgid "_Edit"
 msgstr "_Modifier"
