--- a/po/gl.po
+++ b/po/gl.po
@@ -1,16 +1,17 @@
-# Arabic translation for sopcast-player
+# Galician translation for sopcast-player
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the sopcast-player package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+#
+# Enrique Estévez <keko.gl@gmail.com>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-16 22:07+0000\n"
-"Last-Translator: أبو همام <xx1429xx@hotmail.com>\n"
-"Language-Team: Arabic <ar@li.org>\n"
+"PO-Revision-Date: 2009-11-24 20:39+0000\n"
+"Last-Translator: keko <keko.gl@gmail.com>\n"
+"Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,66 +20,66 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "إعادة محاولة الإتصال بالقناة"
+msgstr "Retrying channel"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "جاري الاتصال..."
+msgstr "Conectando"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "التخزين المؤقت"
+msgstr "Almacenando no búfer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "متصل"
+msgstr "Búfer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "آخر تحديث لدليل القنوات"
+msgstr "Última actualización da guía de canles"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "مشغل سوب كاست"
+msgstr "SopCast Player"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "دليل القنوات"
+msgstr "Guía de canles"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "أفتح وصلة sop"
+msgstr "Abrir enderezo Sop"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "أدخل عنوان الوصلة"
+msgstr "Introducir enderezo Sop"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "الاسم"
+msgstr "Nome"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "مجموعة القناة"
+msgstr "Grupo de canles"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "التصنيف"
+msgstr "Clasificación"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "حجم التدفق"
+msgstr "Formato de fluxo"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -95,256 +96,258 @@ msgstr "QS"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "الوصف"
+msgstr "Descrición"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "القنوات"
+msgstr "Canles"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "إضغط Esc(مفتاح الهروب) للخروج من وضع ملء الشاشة"
+msgstr "Prema ESC para saír de pantalla completa"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "سيرفر الإتصال"
+msgstr "Contactando co servidor"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "تحديث قاعدة البيانات"
+msgstr "Actualizando a base de datos"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "تحديث دليل القنوات قد أكتمل"
+msgstr "Actualización da guía de canles completada"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "إسترجاع دليل القنوات قد فشل بسبب مشاكل الشبكة"
+msgstr "Fallo na actualización da guía de canles debido a problemas de rede"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "تحميل دليل القنوات"
+msgstr "Descargando a guía de canles"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_ملف"
+msgstr "_Ficheiro"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> دليل القنوات"
+msgstr "> Guía de canles"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "إحفظ هذه القناة"
+msgstr "Engadir a marcadores esta canle"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "حجم الصوت"
+msgstr "Volume:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_ملء الشاشة"
+msgstr "_Pantalla completa"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "_مساعدة"
+msgstr "A_xuda"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_عرض"
+msgstr "_Ver"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_القنوات المحفوظة"
+msgstr "_Marcadores"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>آخر تحديث: </i>"
+msgstr "<i>Última actualización: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "آخر تحديث: "
+msgstr "Última actualización: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "لا مطلقا"
+msgstr "Nunca"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>تردد التحديث التلقائي لدليل القنوات</b>"
+msgstr "<b>Frecuencia de actualización automática da guía de canles</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>لغة دليل القنوات</b>"
+msgstr "<b>Idioma da guía de canles</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>نسق دليل القنوات:</b>"
+msgstr "<b>Disposición da guía de canles:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>عنوان دليل القنوات</b>"
+msgstr "<b>URL da guía de canles</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>مهلة القناة</b>"
+msgstr "<b>Tempo de espera para cargar unha canle</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Media Player</b>"
+msgstr "<b>Reprodutor</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>المنفذ</b>"
+msgstr "<b>Portos</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "كلاسيكي (نوافذ مستقلة)"
+msgstr "Clásico (xanelas separadas)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "أمر: "
+msgstr "Orde: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "تردد"
+msgstr "Frecuencia"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "منفذ محدد للدخول: "
+msgstr "Porto de entrada: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "اللغة"
+msgstr "Idioma"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "منفذ محدد للخروج: "
+msgstr "Porto de saída: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "المشغل"
+msgstr "Reprodutor"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "منفذ ساكن"
+msgstr "Portos estáticos"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "انتهى /انقضى الوقت"
+msgstr "Tempo de espera"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr "العنوان: "
+msgstr "URL: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "الإنسجام (نافذة واحدة)"
+msgstr "Unido (Unha única xanela)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "إستخدام مشغل خارجي"
+msgstr "Empregar reprodutor externo"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "تمّ"
+msgstr "Terminada"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "خطأ في السيرفر"
+msgstr "Server Down"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "جاري التنزيل"
+msgstr "Descargando"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "المنافذ الساكنة غير متوفرة"
+msgstr "Portos estáticos non dispoñíbeis"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr "المنافذ الساكنة متوفرة،، هل كنت ترغب في مواصلة إستخدام منافذ حيوية؟"
+msgstr ""
+"Portos estáticos non dispoñíbeis, desexa continuar empregando portos "
+"dinámicos?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i/>ثلاث ثوان <i>"
+msgstr "<i>3 segundos</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i/> ثلاثون ثانية <i>"
+msgstr "<i>30 segundos</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i/>خمس دقائق<i>"
+msgstr "<i>5 minutos</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i/>لا مطلقااً<i>"
+msgstr "<i>Nunca</i>"
 
 msgid "Screenshot"
-msgstr "صوّر الشاشة"
+msgstr "Captura de pantalla"
 
 msgid "Name:"
-msgstr "الاسم:"
+msgstr "Nome:"
 
 msgid "Format:"
-msgstr "الصيغة"
+msgstr "Formato:"
 
 msgid "Bitrate:"
-msgstr "معدّل البايتات:"
+msgstr "Taxa de bits:"
 
 msgid "Channel Group:"
-msgstr "فريق القناة"
+msgstr "Grupo de canles:"
 
 msgid "Classification:"
-msgstr "التصنيف:"
+msgstr "Clasificación:"
 
 msgid "Description:"
-msgstr "الوصف:"
+msgstr "Descrición:"
 
 msgid "Preferences"
-msgstr "التفضيلات"
+msgstr "Preferencias"
 
 msgid "Play"
-msgstr "تشغيل"
+msgstr "Reproducir"
 
 msgid "Stop"
-msgstr "إيقاف"
+msgstr "Deter"
 
 msgid "Always On Top"
-msgstr "دائما في الأعلى"
+msgstr "Sempre en primeiro plano"
 
 msgid "Show Controls"
-msgstr "إظهار عناصر التحكم"
+msgstr "Mostrar os controis"
 
 msgid "Chinese"
-msgstr "صيني"
+msgstr "Chinés"
 
 msgid "English"
-msgstr "إنجليزي"
+msgstr "Inglés"
 
 msgid "<i>Daily</i>"
-msgstr "<i/>يوميا<i>"
+msgstr "<i>Diariamente</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i/>بداية البرنامج<i>"
+msgstr "<i>Comezar programa</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>علم القنوات</b></big>"
+msgstr "<big><b>Canles favoritas</b></big>"
 
 msgid "_Edit"
-msgstr "_تعديل"
+msgstr "_Editar"
 
 msgid "Properties"
-msgstr "الخصائص"
+msgstr "Propiedades"
 
 msgid "Bookmark"
-msgstr "العلامات"
+msgstr "Marcador"
 
 msgid "Show Toolbar"
-msgstr "إظهار شريط الأدوات"
+msgstr "Mostrar a barra de ferramentas"
