--- a/po/lt.po
+++ b/po/lt.po
@@ -1,16 +1,16 @@
-# Arabic translation for sopcast-player
-# Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# Lithuanian translation for sopcast-player
+# Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
 # This file is distributed under the same license as the sopcast-player package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-16 22:07+0000\n"
-"Last-Translator: أبو همام <xx1429xx@hotmail.com>\n"
-"Language-Team: Arabic <ar@li.org>\n"
+"PO-Revision-Date: 2010-11-03 20:52+0000\n"
+"Last-Translator: Mantas Kriaučiūnas <mantas@akl.lt>\n"
+"Language-Team: Lithuanian <lt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,332 +19,332 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "إعادة محاولة الإتصال بالقناة"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "جاري الاتصال..."
+msgstr "Jungiamasi"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "التخزين المؤقت"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "متصل"
+msgstr "Buferis"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "آخر تحديث لدليل القنوات"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "مشغل سوب كاست"
+msgstr "Sopcast leistuvas"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "دليل القنوات"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "أفتح وصلة sop"
+msgstr "Atverti Sop adresą"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "أدخل عنوان الوصلة"
+msgstr "Įveskite Sop adresą"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "الاسم"
+msgstr "Pavadinimas"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "مجموعة القناة"
+msgstr "Kanalų grupė"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "التصنيف"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "حجم التدفق"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "QC"
-msgstr "QC"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "QS"
-msgstr "QS"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "الوصف"
+msgstr "Aprašymas"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "القنوات"
+msgstr "Kanalai"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "إضغط Esc(مفتاح الهروب) للخروج من وضع ملء الشاشة"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "سيرفر الإتصال"
+msgstr "Susisiekiama su serveriu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "تحديث قاعدة البيانات"
+msgstr "Atnaujinama duomenų bazė"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "تحديث دليل القنوات قد أكتمل"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "إسترجاع دليل القنوات قد فشل بسبب مشاكل الشبكة"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "تحميل دليل القنوات"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_ملف"
+msgstr "_Failas"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> دليل القنوات"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "إحفظ هذه القناة"
+msgstr "Įtraukti šį kanalą į adresyną"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "حجم الصوت"
+msgstr "Garsumas:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_ملء الشاشة"
+msgstr "_Visame ekrane"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "_مساعدة"
+msgstr "_Pagalba"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_عرض"
+msgstr "_Rodymas"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_القنوات المحفوظة"
+msgstr "_Adresynas"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>آخر تحديث: </i>"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "آخر تحديث: "
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "لا مطلقا"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>تردد التحديث التلقائي لدليل القنوات</b>"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>لغة دليل القنوات</b>"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>نسق دليل القنوات:</b>"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>عنوان دليل القنوات</b>"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>مهلة القناة</b>"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Media Player</b>"
+msgstr "<b>Video leistuvas</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>المنفذ</b>"
+msgstr "<b>Prievadai</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "كلاسيكي (نوافذ مستقلة)"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "أمر: "
+msgstr "Komanda: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "تردد"
+msgstr "Dažnis"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "منفذ محدد للدخول: "
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "اللغة"
+msgstr "Kalba"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "منفذ محدد للخروج: "
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "المشغل"
+msgstr "Leistuvas"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "منفذ ساكن"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "انتهى /انقضى الوقت"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr "العنوان: "
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "الإنسجام (نافذة واحدة)"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "إستخدام مشغل خارجي"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "تمّ"
+msgstr "Baigta"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "خطأ في السيرفر"
+msgstr "Serveris nepasiekiamas"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "جاري التنزيل"
+msgstr "Atsiunčiama"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "المنافذ الساكنة غير متوفرة"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr "المنافذ الساكنة متوفرة،، هل كنت ترغب في مواصلة إستخدام منافذ حيوية؟"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i/>ثلاث ثوان <i>"
+msgstr "<i>3 sek.</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i/> ثلاثون ثانية <i>"
+msgstr "<i>30 sek.</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i/>خمس دقائق<i>"
+msgstr "<i>5 min.</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i/>لا مطلقااً<i>"
+msgstr ""
 
 msgid "Screenshot"
-msgstr "صوّر الشاشة"
+msgstr ""
 
 msgid "Name:"
-msgstr "الاسم:"
+msgstr "Pavadinimas:"
 
 msgid "Format:"
-msgstr "الصيغة"
+msgstr "Formatas:"
 
 msgid "Bitrate:"
-msgstr "معدّل البايتات:"
+msgstr ""
 
 msgid "Channel Group:"
-msgstr "فريق القناة"
+msgstr "Kanalų grupė:"
 
 msgid "Classification:"
-msgstr "التصنيف:"
+msgstr ""
 
 msgid "Description:"
-msgstr "الوصف:"
+msgstr "Aprašymas:"
 
 msgid "Preferences"
-msgstr "التفضيلات"
+msgstr "Nustatymai"
 
 msgid "Play"
-msgstr "تشغيل"
+msgstr "Leisti"
 
 msgid "Stop"
-msgstr "إيقاف"
+msgstr "Stabdyti"
 
 msgid "Always On Top"
-msgstr "دائما في الأعلى"
+msgstr "Visuomet virš kitų langų"
 
 msgid "Show Controls"
-msgstr "إظهار عناصر التحكم"
+msgstr ""
 
 msgid "Chinese"
-msgstr "صيني"
+msgstr "Kinų"
 
 msgid "English"
-msgstr "إنجليزي"
+msgstr "Anglų"
 
 msgid "<i>Daily</i>"
-msgstr "<i/>يوميا<i>"
+msgstr ""
 
 msgid "<i>Program Start</i>"
-msgstr "<i/>بداية البرنامج<i>"
+msgstr ""
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>علم القنوات</b></big>"
+msgstr ""
 
 msgid "_Edit"
-msgstr "_تعديل"
+msgstr "_Keisti"
 
 msgid "Properties"
-msgstr "الخصائص"
+msgstr "Savybės"
 
 msgid "Bookmark"
-msgstr "العلامات"
+msgstr ""
 
 msgid "Show Toolbar"
-msgstr "إظهار شريط الأدوات"
+msgstr "Rodyti mygtukų juostą"
