--- a/po/ms.po
+++ b/po/ms.po
@@ -8,23 +8,23 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-04-29 03:34+0000\n"
-"Last-Translator: supervivid <dave33bravo@yahoo.com.sg>\n"
+"PO-Revision-Date: 2010-11-12 17:52+0000\n"
+"Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
+"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Sedang Mencuba Saluran"
+msgstr "Memperoleh Saluran"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "Sedang Disambungkan"
+msgstr "Menyambung"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
@@ -38,7 +38,7 @@ msgstr "Penimbal"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Panduan Saluran"
+msgstr "Panduan Saluran Terakhir Dikemaskini"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
@@ -78,7 +78,7 @@ msgstr "Klasifikasi"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Aliran Format"
+msgstr "Format Strim"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -105,47 +105,47 @@ msgstr "Saluran"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "Tekan butang \"Esc\" untuk keluar dari layar penuh"
+msgstr "Tekan butang \"Esc\" untuk keluar dari skrin penuh"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Server Sedang Dihubungi"
+msgstr "Menghubungi Pelayan"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Penampungan Data Sedang Diperbaharui"
+msgstr "Mengemaskini Pengkalan Data"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Pembaharuan Panduan Saluran Selesai"
+msgstr "Kemaskin Panduan Saluran Selesai"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "Gagal Membuka Panduan Saluran Kerana Masalah Jaringan"
+msgstr "Gagal Memperoleh Panduan Saluran Disebabkan Masalah Rangkaian"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "Panduan Saluran Sedang Dimuat Turun"
+msgstr "Memuat Turun Panduan Saluran"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_File"
+msgstr "_Fail"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> Saluran Panduan"
+msgstr "> Panduan Saluran"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Letakkan Penunjuk di Saluran Ini"
+msgstr "Tanda buku Saluran Ini"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "Kekuatan Bunyi:"
+msgstr "Volum:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_SkrinPenuh"
+msgstr "_Skrin Penuh"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
@@ -153,19 +153,19 @@ msgstr "_Bantuan"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_Paparan"
+msgstr "_Papar"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_KumpulanPenunjuk"
+msgstr "_Tanda Buku"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>Terakhir Diperbaharui:</i>"
+msgstr "<i>Kemaskini Terakhir:</i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "Terakhir Diperbaharui "
+msgstr "Kemaskini Terakhir: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
@@ -173,7 +173,7 @@ msgstr "Jangan Sekali"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Kekerapan Memperbaharui Panduan Saluran Secara Otomatis</b>"
+msgstr "<b>Kekerapan Kemaskini Panduan Saluran Secara Automatik</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
@@ -181,7 +181,7 @@ msgstr "<b>Bahasa Panduan Saluran</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Susunan Panduan Saluran:</b>"
+msgstr "<b>Bentangan Panduan Saluran:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
@@ -189,7 +189,7 @@ msgstr "<b>URL Panduan Saluran</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>Masa Terhad Saluran</b>"
+msgstr "<b>Masa Tamat Saluran</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
@@ -197,11 +197,11 @@ msgstr "<b>Pemain Media</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>Ports</b>"
+msgstr "<b>Port</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "Klasik (Layar Berbeza)"
+msgstr "Klasik (Pisah tetingkap)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
@@ -229,11 +229,11 @@ msgstr "Pemain"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "Port Tetap"
+msgstr "Port Statik"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Had masa"
+msgstr "Masa Tamat"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
@@ -241,11 +241,11 @@ msgstr "URL: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "Pengabungan (1 Layar)"
+msgstr "Pengabungan (Satu-tetingkap)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "Gunakan Pemain Luar"
+msgstr "Guna Pemain Luaran"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
@@ -257,16 +257,17 @@ msgstr "Server Gagal Disambung"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "Sedang Dimuat Turun"
+msgstr "Memuat Turun"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "Tidak Memiliki Port Tetap"
+msgstr "Port Tetap Tiada"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr "Port tetap tidak dimiliki, gunakan port dinamik?"
+msgstr ""
+"Port tetap tiada, adakah anda ingin meneruskan penggunaan port dinamik?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
@@ -296,7 +297,7 @@ msgid "Format:"
 msgstr "Format:"
 
 msgid "Bitrate:"
-msgstr "Kadar bit:"
+msgstr "Kadar Bit:"
 
 msgid "Channel Group:"
 msgstr "Kumpulan Saluran"
@@ -308,7 +309,7 @@ msgid "Description:"
 msgstr "Keterangan:"
 
 msgid "Preferences"
-msgstr "Pilihan"
+msgstr "Keutamaan"
 
 msgid "Play"
 msgstr "Main"
@@ -317,25 +318,25 @@ msgid "Stop"
 msgstr "Berhenti"
 
 msgid "Always On Top"
-msgstr "Sering Di Ataskan"
+msgstr "Sentiasa Diatas"
 
 msgid "Show Controls"
-msgstr "Paparkan Alat"
+msgstr "Papar Kawalan"
 
 msgid "Chinese"
-msgstr "Chinese"
+msgstr "Cina"
 
 msgid "English"
-msgstr "Bahasa Inggeris"
+msgstr "Inggeris"
 
 msgid "<i>Daily</i>"
 msgstr "<i>Setiap Hari</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i>Mulakan Program</i>"
+msgstr "<i>Permulaan Program</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Penunjuk Saluran</b></big>"
+msgstr "<big><b>Tanda Buku Saluran</b></big>"
 
 msgid "_Edit"
 msgstr "_Sunting"
@@ -344,7 +345,7 @@ msgid "Properties"
 msgstr "Ciri-ciri"
 
 msgid "Bookmark"
-msgstr "Penunjuk"
+msgstr "Tanda Buku"
 
 msgid "Show Toolbar"
-msgstr "Papar Papan Peralatan"
+msgstr "Papar Palang Alat"
