--- a/po/nb.po
+++ b/po/nb.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-02-11 22:22+0000\n"
-"Last-Translator: oyvindmunthe <Unknown>\n"
+"PO-Revision-Date: 2010-04-17 11:17+0000\n"
+"Last-Translator: Westgaard <Unknown>\n"
 "Language-Team: Norwegian Bokmal <nb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
+"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
@@ -56,7 +56,7 @@ msgstr "Åpne Sop Addresse"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "Innfør Sop Addresse"
+msgstr "Tast inn Sop-Adresse"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
@@ -309,7 +309,7 @@ msgid "Description:"
 msgstr "Beskrivelse:"
 
 msgid "Preferences"
-msgstr "Preferanser"
+msgstr "Innstillinger"
 
 msgid "Play"
 msgstr "Spill av"
