--- a/po/pl.po
+++ b/po/pl.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-06-04 23:27+0000\n"
-"Last-Translator: thifx <thifx@o2.pl>\n"
+"PO-Revision-Date: 2010-10-01 15:45+0000\n"
+"Last-Translator: Inox <Unknown>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
+"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Ponawianie połączenia"
+msgstr "Ponowna próba kanłu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
@@ -33,12 +33,12 @@ msgstr "Buforowanie"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "Buforowanie"
+msgstr "Bufor"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Przewodnik po kanałach ostatnio zaktualizowanych"
+msgstr "Przewodnik po kanałach ostatnio zaktualizowany"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
@@ -122,8 +122,8 @@ msgstr "Aktualizacja przewodnika po kanałach zakończona"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
 msgstr ""
-"Ściąganie przewodnika po kanałach zakończono niepowodzeniem z powodu "
-"problemów z połączeniem sieciowym"
+"Błąd pobierania przewodnika po kanałach z powodu problemów z połączeniem "
+"sieciowym"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
@@ -235,7 +235,7 @@ msgstr "Porty statyczne"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Połączenie wygasło"
+msgstr "Przekroczony limit czasu"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
