--- a/po/tr.po
+++ b/po/tr.po
@@ -1,4 +1,4 @@
-# Arabic translation for sopcast-player
+# Turkish translation for sopcast-player
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the sopcast-player package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-16 22:07+0000\n"
-"Last-Translator: أبو همام <xx1429xx@hotmail.com>\n"
-"Language-Team: Arabic <ar@li.org>\n"
+"PO-Revision-Date: 2010-01-02 14:24+0000\n"
+"Last-Translator: zeugma <Unknown>\n"
+"Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,66 +19,66 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "إعادة محاولة الإتصال بالقناة"
+msgstr "Kanal yeniden deneniyor"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "جاري الاتصال..."
+msgstr "Bağlanıyor"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "التخزين المؤقت"
+msgstr "Arabelleğe alınıyor"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "متصل"
+msgstr "Arabellek"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "آخر تحديث لدليل القنوات"
+msgstr "Kanal Listesi Son Güncelleme:"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "مشغل سوب كاست"
+msgstr "SopCast Player"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "دليل القنوات"
+msgstr "Kanal Listesi"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "أفتح وصلة sop"
+msgstr "Open Sop Adresi"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "أدخل عنوان الوصلة"
+msgstr "Sop Adresi Giriniz"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "الاسم"
+msgstr "İsim"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "مجموعة القناة"
+msgstr "Kanal Grubu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "التصنيف"
+msgstr "Sınıflandırma"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "حجم التدفق"
+msgstr "Akış Formatı"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -95,256 +95,258 @@ msgstr "QS"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "الوصف"
+msgstr "Açıklama"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "القنوات"
+msgstr "Kanallar"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "إضغط Esc(مفتاح الهروب) للخروج من وضع ملء الشاشة"
+msgstr "Tam ekrandan çıkmak için ESC'ye basın"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "سيرفر الإتصال"
+msgstr "Sunucuya Bağlanılıyor"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "تحديث قاعدة البيانات"
+msgstr "Veritabanı Güncelleniyor"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "تحديث دليل القنوات قد أكتمل"
+msgstr "Kanal Listesinin Güncellenmesi Tamamlandı"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "إسترجاع دليل القنوات قد فشل بسبب مشاكل الشبكة"
+msgstr "Kanal Listesi Alımı Ağ Sorunları Yüzünden Başarısız Oldu"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "تحميل دليل القنوات"
+msgstr "Kanal Listesi İndiriliyor"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_ملف"
+msgstr "_Dosya"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> دليل القنوات"
+msgstr "> Kanal Listesi"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "إحفظ هذه القناة"
+msgstr "Bu Kanalı Yerimlerine Ekle"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "حجم الصوت"
+msgstr "Ses seviyesi:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_ملء الشاشة"
+msgstr "_Tam ekran"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "_مساعدة"
+msgstr "_Yardım"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_عرض"
+msgstr "_Görünüm"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_القنوات المحفوظة"
+msgstr "_Yer İmleri"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>آخر تحديث: </i>"
+msgstr "<i>Son Güncelleme: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "آخر تحديث: "
+msgstr "Son Güncelleme: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "لا مطلقا"
+msgstr "Hiçbir zaman"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>تردد التحديث التلقائي لدليل القنوات</b>"
+msgstr "<b>Kanal Listesi Otomatik Güncelleme Sıklığı</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>لغة دليل القنوات</b>"
+msgstr "<b>Kanal Listesi Dili</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>نسق دليل القنوات:</b>"
+msgstr "<b>Kanal kılavuz düzeni:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>عنوان دليل القنوات</b>"
+msgstr "<b>Kanal Listesi URL'si</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>مهلة القناة</b>"
+msgstr "<b>Kanal Zaman Aşımı</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Media Player</b>"
+msgstr "<b>Çokluortam Oynaması</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>المنفذ</b>"
+msgstr "<b>Kapılar</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "كلاسيكي (نوافذ مستقلة)"
+msgstr "Klasik (Ayrı pencereler)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "أمر: "
+msgstr "Komut: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "تردد"
+msgstr "Sıklık"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "منفذ محدد للدخول: "
+msgstr "Giriş Kapısı: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "اللغة"
+msgstr "Dil"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "منفذ محدد للخروج: "
+msgstr "Çıkış Kapısı: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "المشغل"
+msgstr "Oynatıcı"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "منفذ ساكن"
+msgstr "Kalıcı Kapılar"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "انتهى /انقضى الوقت"
+msgstr "Zaman Aşımı"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr "العنوان: "
+msgstr "URL: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "الإنسجام (نافذة واحدة)"
+msgstr "Bütünlük (Tek pencere)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "إستخدام مشغل خارجي"
+msgstr "Harici Oynatıcı Kullan"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "تمّ"
+msgstr "Tamamlandı"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "خطأ في السيرفر"
+msgstr "Sunucu Kapalı"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "جاري التنزيل"
+msgstr "İndiriliyor"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "المنافذ الساكنة غير متوفرة"
+msgstr "Kalıcı Kapılar Erişilemez"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr "المنافذ الساكنة متوفرة،، هل كنت ترغب في مواصلة إستخدام منافذ حيوية؟"
+msgstr ""
+"Kalıcı kapılara erişilemiyor, geçici kapıları kullanarak devam etmek ister "
+"misiniz?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i/>ثلاث ثوان <i>"
+msgstr "<i>3 Saniye</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i/> ثلاثون ثانية <i>"
+msgstr "<i>30 Saniye</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i/>خمس دقائق<i>"
+msgstr "<i>5 Dakika</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i/>لا مطلقااً<i>"
+msgstr "<i>Asla</i>"
 
 msgid "Screenshot"
-msgstr "صوّر الشاشة"
+msgstr "Ekran Görüntüsü"
 
 msgid "Name:"
-msgstr "الاسم:"
+msgstr "İsim:"
 
 msgid "Format:"
-msgstr "الصيغة"
+msgstr "Biçim:"
 
 msgid "Bitrate:"
-msgstr "معدّل البايتات:"
+msgstr "Bit oranı:"
 
 msgid "Channel Group:"
-msgstr "فريق القناة"
+msgstr "Kanal Grubu:"
 
 msgid "Classification:"
-msgstr "التصنيف:"
+msgstr "Sınıflandırma:"
 
 msgid "Description:"
-msgstr "الوصف:"
+msgstr "Açıklama:"
 
 msgid "Preferences"
-msgstr "التفضيلات"
+msgstr "Tercihler"
 
 msgid "Play"
-msgstr "تشغيل"
+msgstr "Oynat"
 
 msgid "Stop"
-msgstr "إيقاف"
+msgstr "Durdur"
 
 msgid "Always On Top"
-msgstr "دائما في الأعلى"
+msgstr "Her Zaman Üstte"
 
 msgid "Show Controls"
-msgstr "إظهار عناصر التحكم"
+msgstr "Denetimleri Göster"
 
 msgid "Chinese"
-msgstr "صيني"
+msgstr "Çince"
 
 msgid "English"
-msgstr "إنجليزي"
+msgstr "İngilizce"
 
 msgid "<i>Daily</i>"
-msgstr "<i/>يوميا<i>"
+msgstr "<i>Günlük</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i/>بداية البرنامج<i>"
+msgstr "<i>Programı Başlat</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>علم القنوات</b></big>"
+msgstr "<big><b>Kanal Yer İmleri</b></big>"
 
 msgid "_Edit"
-msgstr "_تعديل"
+msgstr "Dü_zen"
 
 msgid "Properties"
-msgstr "الخصائص"
+msgstr "Özelli_kler"
 
 msgid "Bookmark"
-msgstr "العلامات"
+msgstr "Yer İmi"
 
 msgid "Show Toolbar"
-msgstr "إظهار شريط الأدوات"
+msgstr "Araç Çubuğunu Göster"
