--- a/po/uk.po
+++ b/po/uk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-04-14 21:12+0000\n"
-"Last-Translator: svv <skrypnychuk@gmail.com>\n"
+"PO-Revision-Date: 2009-11-25 10:10+0000\n"
+"Last-Translator: CrabMan <Unknown>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
+"X-Launchpad-Export-Date: 2010-11-14 13:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
@@ -310,10 +310,10 @@ msgid "Description:"
 msgstr "Опис:"
 
 msgid "Preferences"
-msgstr "Настройки"
+msgstr "Параметри"
 
 msgid "Play"
-msgstr "Грати"
+msgstr "Відтворити"
 
 msgid "Stop"
 msgstr "Зупинити"
@@ -340,7 +340,7 @@ msgid "<big><b>Channel Bookmark</b></big>"
 msgstr "<big><b>Закладка каналу</b></big>"
 
 msgid "_Edit"
-msgstr "_Редагування"
+msgstr "_Правка"
 
 msgid "Properties"
 msgstr "Властивості"
